--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Prerequisites
 *.d
 */.DS_Store
+report/*
+*.gif
 
 # Compiled Object files
 *.slo
@@ -35,3 +37,4 @@
 CmakeCache.txt
 CmakeFiles/*
 .vscode/*
+
